--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-validator": "^6.8.0",
+    "passport": "^0.4.1",
+    "passport-amazon": "^1.0.0",
+    "passport-github": "^1.1.0",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5"
