added .env config

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+PORT=3000
 GITHUB_CLIENT_ID="cdc430dc9cb6dc2e6164"
 GITHUB_CLIENT_SECRET="7b7f3170c9254e3b8566a117cb46dcfe568e54ca"
 GITHUB_CALLBACK_URL="http://127.0.0.1:3000/auth/github/callback"
