--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bootswatch": "^4.5.3",
     "cors": "^2.8.5",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
