creating new models - not finished

--- a/config/config.json
+++ b/config/config.json
@@ -4,38 +4,20 @@
     "password": null,
     "database": "booksdb",
     "host": "127.0.0.1",
-    "dialect": "postgres",
-    "pool": {
-      "max": 5,
-      "min": 0,
-      "acquire": 30000,
-      "idle": 10000
-    }
+    "dialect": "postgres"
   },
   "test": {
     "username": "",
     "password": null,
-    "database": "booksdbtest",
+    "database": "booksdb",
     "host": "127.0.0.1",
-    "dialect": "postgres",
-    "pool": {
-      "max": 5,
-      "min": 0,
-      "acquire": 30000,
-      "idle": 10000
-    }
+    "dialect": "postgres"
   },
   "production": {
     "username": "",
     "password": null,
     "database": "booksdb",
     "host": "127.0.0.1",
-    "dialect": "postgres",
-    "pool": {
-      "max": 5,
-      "min": 0,
-      "acquire": 30000,
-      "idle": 10000
-    }
+    "dialect": "postgres"
   }
 }
