started working on book-api

--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Backend book cataloging software",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "bootswatch": "^4.5.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.1",
     "express-validator": "^6.8.0",
     "passport": "^0.4.1",
