--- a/package.json
+++ b/package.json
@@ -26,19 +26,17 @@
   "devDependencies": {
     "nodemon": "^2.0.6"
   },
-  /* // /* "scripts": {
+  /* "scripts": 
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  }, */ 
+    "start": "node server.js" */
   "scripts": {
-    "dev": "react-scripts start",
-    "start": "serve -s build",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
-    }
-
+      "dev": "react-scripts start",
+      "start": "serve -s build",
+      "build": "react-scripts build",
+      "test": "react-scripts test --env=jsdom",
+      "eject": "react-scripts eject",
+      "heroku-postbuild": "npm run build"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
