--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "passport": "^0.4.1",
     "passport-amazon": "^1.0.0",
     "passport-github": "^1.1.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5",
