--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0",
     "serve": "^11.3.2",
     "serve-favicon": "^2.5.0"
   },
